--- a/main.html
+++ b/main.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <!-- add table here -->
-
+<table>
+<tr><th>Name</th><th>Class</th><th>RollNo</th></tr>
+<tr><td>shiv</td><td>12</td><td>09</td></tr>	
+<tr><td>ankit</td><td>10</td><td>01</td></tr>
+<tr><td>ayush</td><td>09</td><td>02</td></tr>	
+<tr><td>preeti</td><td>11</td><td>04</td></tr>	
+</table>
         
 </body>
 </html>
