--- a/main.html
+++ b/main.html
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Styled Table Example</title>
+ 
 </head>
 <body>
-    <!-- add table here -->
-<table>
-<tr><th>Name</th><th>Class</th><th>RollNo</th></tr>
-<tr><td>shiv</td><td>12</td><td>09</td></tr>	
-<tr><td>ankit</td><td>10</td><td>01</td></tr>
-<tr><td>ayush</td><td>09</td><td>02</td></tr>	
-<tr><td>preeti</td><td>11</td><td>04</td></tr>	
-</table>
-        
+
+  <table>
+    <caption>Topic Tags</caption>
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Tag</th>
+        <th>Description</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>HTML</td>
+        <td>Markup language for creating web pages</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>CSS</td>
+        <td>Style sheet language used for describing the presentation of a document</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>JavaScript</td>
+        <td>Programming language for web development and interactivity</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>React</td>
+        <td>JavaScript library for building user interfaces</td>
+      </tr>
+    </tbody>
+  </table>
+
 </body>
 </html>
+
